# Socratic-Duck

./: LICENSE  README.md  package.json  pyproject.toml  run.sh
tui_gateway/: __init__.py  colors.py  config.py  entry.py  secret_prompt.py  setup.py
ui-tui/: package-lock.json  package.json
ui-tui/src/: banner.ts  entry.tsx  gatewayClient.ts
ui-tui/src/app/: setupHandoff.ts
ui-tui/src/app/slash/: registry.ts
ui-tui/src/app/slash/commands/: core.ts  duck.ts
ui-tui/src/components/: appChrome.tsx  appLayout.tsx  branding.tsx  helpHint.tsx
ui-tui/src/lib/: externalCli.ts
